Add various suggestions from Peter

--- a/academic/post-ifl2007/supero.bib
+++ b/academic/post-ifl2007/supero.bib
@@ -284,6 +284,14 @@
  }
 
 
+@book{refal,
+    author = "V. F. Turchin",
+    title = {Refal-5, Programming Guide \& Reference Manual},
+    publisher = {New England Publishing Co.},
+    address = {Holyoke, MA},
+    year = {1989},
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% SEMINAL PAPERS
 
