Give more credit to Peter for proof reading

--- a/academic/post-ifl2007/supero.tex
+++ b/academic/post-ifl2007/supero.tex
@@ -782,7 +782,7 @@ We have introduced an optimising front-end which can enhance the results of back
 
 The Programming Language Shootout\footnote{\url{http://shootout.alioth.debian.org/}} has shown that low-level Haskell can compete with with low-level imperative languages such as C. Our goal is that Haskell programs can be written in a high-level declarative style, yet still perform competitively.
 
-\paragraph{Acknowledgements} We would like to thank Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC, and Peter Jonsson for helpful discussions.
+\paragraph{Acknowledgements} We would like to thank Simon Peyton Jones, Simon Marlow and Tim Chevalier for help understanding the low-level details of GHC, and Peter Jonsson for helpful discussions and presentation suggestions.
 
 \bibliographystyle{plain}
 
