--- a/academic/post-ifl2007/supero.tex
+++ b/academic/post-ifl2007/supero.tex
@@ -44,7 +44,7 @@
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-Haskell is a functional language, with features such as higher order functions and lazy evaluation, which allow succinct programs. These high-level features present many challenges for optimising compilers. This paper presents a supercompilation based approach, which produces speed improvements of up to 40\% when used in conjunction with GHC. Our practical experiments have influenced a number of novel approaches to supercompilation, particularly with regards to let bindings and the generalisation technique.
+Haskell is a functional language, with features such as higher order functions and lazy evaluation, which allow succinct programs. These high-level features present many challenges for optimising compilers. We report practical experiments using novel variants of \textit{supercompilation}, with special attention to let bindings and the generalisation technique. Results include speed improvements of up to 55\% when our supercompiler is used in conjunction with GHC.
 \end{abstract}
 
 \section{Introduction}
@@ -87,15 +87,14 @@ int main()
 \item[Laziness and Thunks] The Haskell program proceeds in a lazy manner, first demanding one character from |getContents|, then processing it with each of the functions in the pipeline. At each stage, a lazy thunk for the remainder of each function is created.
 \end{description}
 
-Using the optimiser developed in this paper we can eliminate all these overheads. We obtain a program that performs \textit{faster} than the C version. The optimiser is based around the techniques of supercompilation \cite{supercompilation}, where as much of the program as possible is evaluated at compile time, leaving a faster residual program. A perfect residual program would only perform actions directly related to the input data.
+Using the optimiser developed in this paper, named Supero, we can eliminate all these overheads. We obtain a program that performs \textit{faster} than the C version. The optimiser is based around the techniques of supercompilation \cite{supercompilation}, where as much of the program as possible is evaluated at compile time, leaving a faster residual program. A perfect residual program would only perform actions directly related to the input data.
 
 Our goal is an automatic optimisation that makes high-level Haskell programs run as fast as low-level equivalents, eliminating the current need for hand-tuning and low-level techniques to obtain competitive performance. We require no annotations on any part of the program, including the library functions.
 
 \subsection{Contributions}
 
 \begin{itemize}
-\item To our knowledge, this is the first time supercompilation has been applied to Haskell. This enables us to compare against GHC, a mature optimising compiler for Haskell.
-\item We make careful study of the let expression, something absent from the Core language of many other papers on supercompilation.
+\item To our knowledge, this is the first time supercompilation has been applied to Haskell. \item We make careful study of the let expression, something absent from the Core language of many other papers on supercompilation.
 \item We present an alternative generalisation step, based on a homeomorphic embedding \cite{leuschel:homeomorphic}.
 \end{itemize}
 
@@ -119,27 +118,44 @@ expr  =  v                                          {-" \text{  variable} "-}
 pat   =  c vs_
 \end{code}
 
-Where |v| ranges over variables, |c| ranges over constructors, |f| ranges over functions, |s|, |t|, |x|, |y| and |z| range over expressions and |p| ranges over patterns.
+Where |v| ranges over variables, |c| ranges over constructors, |f| ranges over functions, |x| and |y| range over expressions and |p| ranges over patterns.
 \bigskip
 \figend
 \caption{Core syntax}
 \label{fig:core}
 \end{fig}
 
-All our optimisations operate on a standard Core language \cite{me:yhc_core}. The expression type is given in Figure \ref{fig:core}. A program is a mapping of function names to expressions. Our Core language is higher order and lazy, but lacks much of the syntactic sugar found in Haskell. Pattern matching occurs only in case expressions, and all case expressions are exhaustive. All names are fully qualified. Haskell's type classes have been removed by the dictionary transformation \cite{wadler:type_classes}.
+\begin{fig}
+\begin{code}
+split(v) = (v, [])
+split(c) = (c, [])
+split(f) = (f, [])
+split(x ys_) = (bullet bullet, x:ys_)
+split(\vs_ -> x) = (\vs_ -> bullet, x)
+split(let v = x in y) = (let v = bullet in bullet, [x,y])
+split(case x of {p_1 -> y_1 ; ... ; p_n -> y_n}) = (case x of {p_1 -> bullet ; ... ; p_n -> bullet, [y_1, ... ,y_n])
+\end{code}
+\figend
+\caption{The split function, returning a shell and all subexpressions.}
+\label{fig:core}
+\end{fig}
+
+Our supercompiler uses the Yhc-Core language \cite{me:yhc_core}. The expression type is given in Figure \ref{fig:core}. A program is a mapping of function names to expressions. Our Core language is higher order and lazy, but lacks much of the syntactic sugar found in Haskell. Pattern matching occurs only in case expressions, and all case expressions are exhaustive. All names are fully qualified. Haskell's type classes have been removed by the dictionary transformation \cite{wadler:type_classes}.
 
 The Yhc compiler, a fork of nhc \cite{nhc}, can output Core files. Yhc can also link in all definitions from all required libraries, producing a single Core file representing the whole program.
 
 The primary difference between Yhc-Core and GHC-Core \cite{ghc_core} is that Yhc-Core is untyped. The Core is generated from well-typed Haskell, and is guaranteed not to fail with a type error. All the transformations could be implemented equally well in a typed Core language, but we prefer to work in an untyped language for simplicity of implementation.
 
-In order to avoid accidental variable name clashes while performing transformations, we demand that all variables within a program are unique. All transformations may assume this invariant, and must ensure it as a postcondition.
+In order to avoid accidental variable name clashes while performing transformations, we demand that all variables within a program are unique. All transformations may assume this invariant, and must maintain it.
 
-\section{Optimisation}
+The spine of an expression is an expression without its immediate subexpressions.
+
+\section{Supercompilation}
 \label{sec:optimisation}
 
-Our optimisation procedure takes a Core program as input, and produces a new equivalent Core program as output. To improve the program we do not make small local changes to the original, but instead \textit{evaluate it} so far as possible at compile time, leaving a \textit{residual program} to be run.
+Our supercompiler takes a Core program as input, and produces a new equivalent Core program as output. To improve the program we do not make small local changes to the original, but instead \textit{evaluate it} so far as possible at compile time, leaving a \textit{residual program} to be run.
 
-Each function in the output program is an optimised version of some associated expression in the input program. Optimisation starts at the |main| function, and optimises the expression associated with |main|. Once the expression has been optimised, the outermost element in the expression becomes part of the residual program. All the subexpressions are assigned names, and will be given definitions in the residual program. If any expression (up to alpha renaming) already has a name in the residual program, then the same name is used. Each of these named inner expressions are then optimised as before.
+Each function in the output program is an optimised version of some associated expression in the input program. Supercompilation starts at the |main| function, and supercompiles the expression associated with |main|. Once the expression has been supercompiled, the outermost element in the expression becomes part of the residual program. All the subexpressions are assigned names, and will be given definitions in the residual program. If any expression (up to alpha renaming) already has a name in the residual program, then the same name is used. Each of these named inner expressions are then supercompiled as before.
 
 \begin{comment}
 \begin{fig}
@@ -206,19 +222,19 @@ let v = c x_1 ... x_n in y
 \label{fig:simplify}
 \end{fig}
 
-The optimisation of an expression proceeds by repeatedly inlining a function application until some termination criteria is met. Once the termination criteria holds, the expression is generalised before the outer spine becomes part of the residual program and all subexpressions are assigned names. After each inlining step, the expression is simplified using the rules in Figure \ref{fig:simplify}. There are three key decisions in the optimisation of an expression:
+The supercompilation of an expression proceeds by repeatedly inlining a function application until some termination criteria is met. Once the termination criterion holds, the expression is generalised before the outer spine becomes part of the residual program and all subexpressions are assigned names. After each inlining step, the expression is simplified using the rules in Figure \ref{fig:simplify}. There are three key decisions in the supercompilation of an expression:
 
 \begin{enumerate}
 \item Which function to inline.
-\item What termination criteria to use.
+\item What termination criterion to use.
 \item What generalisation to use.
 \end{enumerate}
 
-The original Supero work \cite{me:supero_ifl} always inlined the left-most inner-most function call, a bound on the size of the expression for termination, and the identity operation as the generalisation. First we give examples of our optimiser in use, then we examine each of the three choices we have made.
+The original Supero work \cite{me:supero_ifl} always inlined the left-most inner-most function call, used a bound on the size of the expression to ensure termination, and performed no generalisation. First we give examples of our supercompiler in use, then we return to examine each of the three choices we have made.
 
-\subsection{Examples of Optimisation}
+\subsection{Examples of Supercompilation}
 
-\subsubsection{Example 1: Specialisation}\hfill
+\subsubsection{Example 1: Supercompiling and Specialisation}\hfill
 
 \begin{code}
 main as = map (\b -> b + 1) as
@@ -230,15 +246,15 @@ map f cs = case  cs of
 
 There are two primary inefficiencies in this example: (1) the |map| function passes the |f| argument invariantly in every call; (2) the application of |f| is more expensive than if the function was known in advance.
 
-The optimisation proceeds by first assigning a new unique name (we choose |h0|) to |map (\b -> b + 1) as|, providing parameters for each of the free variables in the expression, namely |as|. We then choose to expand |map|, and invoke the simplification rules:
+The supercompilation proceeds by first assigning a new unique name (we choose |h0|) to |map (\b -> b + 1) as|, providing parameters for each of the free variables in the expression, namely |as|. We then choose to expand |map|, and invoke the simplification rules:
 
 \begin{code}
-map (\b -> b + 1) as = h0 as = case  as of
+h0 as = map (\b -> b + 1) as = case  as of
                                      []    -> []
                                      d:ds  -> d+1 : map (\b -> b + 1) ds
 \end{code}
 
-We now have a |case| with a variable as the scrutinee at the root of the expression, which cannot be optimised further, so we residuate the outer spine. When processing the expression |map (\b -> b + 1) ds| we spot this to be an alpha renaming of an existing generated function, namely |h0|, and use this function:
+We now have a |case| with a variable as the scrutinee at the root of the expression, which cannot be reduced further, so we residuate the outer spine. When processing the expression |map (\b -> b + 1) ds| we spot this to be an alpha renaming of the body of an existing generated function, namely |h0|, and use this function:
 
 \begin{code}
 h0 as = case  as of
@@ -248,9 +264,9 @@ h0 as = case  as of
 
 We have now specialised the higher-order argument, passing less data at runtime.\noexample
 
-\subsubsection{Example 2: Deforestation}\hfill
+\subsubsection{Example 2: Supercompiling and Deforestation}\hfill
 
-The deforestation transformation \cite{wadler:deforestation} removes intermediate lists from a traversal. Consider the operation of mapping |(+1)| over |map (*2)|. The first |map| deconstructs the list, and then reconstructs it. The second does the same.
+The deforestation transformation \cite{wadler:deforestation} removes intermediate lists from a traversal. A similar result is obtained by applying supercompilation, as shown here. Consider the operation of mapping |(*2)| over a list and then mapping |(+1)| over the result. The first |map| deconstructs one list, and constructs another. The second does the same.
 
 \begin{code}
 main as = map (\b -> b+1) (map (\c -> c*2) as)
@@ -267,26 +283,26 @@ h0 as = case  map (\c -> c*2) as of
 Next we choose to inline the |map| scrutinised by the case, then perform the |case|/|case| simplification, and finally residuate:
 
 \begin{code}
-h0 as = case  (case  as of
-                     []    -> []
-                     e:es  -> e*2 : map (\c -> c*2) es) of
-              []    -> []
-              d:ds  -> y+1 : map (\b -> b+1) ds
+h0 as  = case  (case  as of
+                      []    -> []
+                      e:es  -> e*2 : map (\c -> c*2) es) of
+               []    -> []
+               d:ds  -> y+1 : map (\b -> b+1) ds
 
-h0 as = case  as of
-              []    -> []
-              d:ds  -> (y*2)+1 : map (\b -> b+1) (map (\c -> c*2) ds)
+       = case  as of
+               []    -> []
+               d:ds  -> (y*2)+1 : map (\b -> b+1) (map (\c -> c*2) ds)
 
-h0 as = case  as of
-              []    -> []
-              d:ds  -> (y*2)+1 : h0 ds
+       = case  as of
+               []    -> []
+               d:ds  -> (y*2)+1 : h0 ds
 \end{code}
 
-Now the intermediate lists have been removed, and the higher-order arguments to |map| have both been specialised.  \noexample
+Both intermediate lists have been removed, and the functional arguments to |map| have both been specialised.  \noexample
 
 \subsection{Which function to inline}
 
-Given an expression under optimisation, at each step some function needs to be inlined -- leading to the question of which to choose. In most supercompilation work the choice is made following the runtime semantics of the program, however in a language with let expressions this may be inappropriate. If a function in a let binding is inlined, it may become simple enough to replace in the let body. If a function in a let body is inlined, the let body may now only refer to the let binding once, allowing the binding to be inlined. Let us take two expressions, based on intermediate steps obtained from real programs (wordcounting and prime number calculation respectively):
+During the supercompilation of an expression, at each step some function needs to be inlined. Which to choose? In most supercompilation work the choice is made following the runtime semantics of the program. But in a language with let expressions this may be inappropriate. If a function in a let binding is inlined, its application when reduced my be simple enough to substitute in the let body. However, if a function in a let body is inlined, the let body may now only refer to the let binding once, allowing the binding to be substituted. Let us take two expressions, based on intermediate steps obtained from real programs (word counting and prime number calculation respectively):
 
 \begin{tabular}{p{5cm}p{5cm}}
 \begin{code}
@@ -300,17 +316,17 @@ in const 0 x : map f x
 \end{code}
 \end{tabular}
 
-In the first example, a single expansion of the let binding will result in |(\x -> 1 == x)|, which will be substituted for |x| producing |1 == 1 : map (\x -> 1 == x) ys| after simplification. Now |map| can be specialised appropriately. Expanding the |map| repeatedly would result in an infinite chain of function calls, and would be terminated without achieving specialisation.
+In the first example, inlining |($)| in the let binding gives |(\x -> 1 == x)|, which is now simple enough to substitute for |x|, resulting in |(1 == 1 : map (\x -> 1 == x) ys)| after simplification. Now |map| can be specialised appropriately. Alternatively, expanding the |map| repeatedly would keep increasing the size of expression until the termination criterion was met, aborting the supercompilation of this expression without achieving specialisation.
 
-Taking the second example, unfolding |repeat| will not terminate. However, by unfolding the |const| we produce |let x = repeat 1 in 0 : map f x|. Since |x| is only used once we may replace it to produce |0 : map (+1) (repeat 1)|, which may be deforested appropriately.
+Taking the second example, |repeat| can be inlined indefinately. However, by unfolding the |const| we produce |let x = repeat 1 in 0 : map f x|. Since |x| is only used once we may substitute it to produce |(0 : map (+1) (repeat 1))|, which may be deforested appropriately.
 
-Unfortunately these two examples seem to suggest different strategies for unfolding - unfold the let binding or unfold the let body. However, they do have a common theme -- unfolding the function that cannot be unfolding infinitely. We use the strategy of picking the left-most inner-most function that does \textit{not} cause the termination criteria to be invoked. If no such function exists, we simply revert to left-most inner-most.
+Unfortunately these two examples seem to suggest different strategies for unfolding -- unfold in the let binding or unfold in the let body. However, they do have a common theme -- unfold the function that cannot be unfolded infinitely often. We use the strategy of picking the left-most inner-most function that does \textit{not} cause the termination criterion to be invoked. If no such function exists, we simply revert to left-most inner-most.
 
-\subsection{The Termination Criteria}
+\subsection{The Termination Criterion}
 
-The original Supero program used a size bound on the expression to determine when to stop. The problem with a size bound is that different programs require different bounds to ensure timely completion at compile-time, and yet still produce sufficient optimisation. Indeed, within a single program, there may be different elements requiring different size bounds, a problem exacerbated as the size and complexity of a program increases.
+The original Supero program used a size bound on the expression to determine when to stop. The problem with a size bound is that different programs require different bounds to ensure both timely completion at compile-time and efficient residual programs. Indeed, within a single program, there may be different elements requiring different size bounds, a problem exacerbated as the size and complexity of a program increases.
 
-We use the termination criteria suggested by S{\o}rensen and Gl{\"u}ck \cite{sorensen:supercompilation} -- homeomorphic embedding. An expression $x$ is an embedding of $y$, written $x \unlhd y$, iff:
+We use the termination criterion suggested by S{\o}rensen and Gl{\"u}ck \cite{sorensen:supercompilation} -- homeomorphic embedding. An expression $x$ is an embedding of $y$, written $x \unlhd y$, if the relationship can be inferred by the rules:
 
 \[x \unlhd y = \text{dive}(x,y) \vee \text{couple}(x,y)\]
 \vspace{-10mm}
@@ -318,55 +334,20 @@ We use the termination criteria suggested by S{\o}rensen and Gl{\"u}ck \cite{sor
 \noindent\begin{tabular}{p{5cm}p{5cm}}
 \[\frac{s \unlhd t_i \text{ for some } |i|}{\text{dive}(s, \sigma(t_1,\ldots,t_n))} \]
 &
-\[\frac{\sigma_1 \stackrel{*}{=} \sigma_2,
+\[\frac{\sigma_1 \cong \sigma_2,
         s_1 \unlhd t_1, \ldots , s_n \unlhd t_n}
        {\text{couple}(\sigma_1 (s_1,\ldots,s_n), \sigma_2 (t_1,\ldots,t_n))}
 \]
 \end{tabular}
 
-We use $\sigma$ to denote the spine of an expression, with $s_1,\ldots,s_n$ being its subexpressions. We test for equality of $\sigma_1$ and $\sigma_2$ using $\stackrel{*}{=}$ -- equality where all variables are considered equal. We terminate the optimisation of an expression |y| if on the chain of reductions from |main| to |y| we have encountered an expression |x| such that $x \unlhd y$.
+We use $\sigma$ to denote the spine of an expression, with $s_1,\ldots,s_n$ being its subexpressions. We test for equivalence of $\sigma_1$ and $\sigma_2$ using the $\cong$ relation, a weakened form of equality where all variables are considered equal. We terminate the supercompilation of an expression |y| if on the chain of reductions from |main| to |y| we have encountered an expression |x| such that $x \unlhd y$.
 
-In addition to using the homeomorphic embedding, we also terminate if further unfolding would not yield any improvement to the root of the expression. For example, if the root of an expression is a constructor application, no further unfolding will change the root constructor. When terminating for this reason, we always residuate the outer spine of the expression, without applying any generalisation.
+In addition to using the homeomorphic embedding, we also terminate if further unfolding cannot yield any improvement to the root of the expression. For example, if the root of an expression is a constructor application, no further unfolding will change the root constructor. When terminating for this reason, we always residuate the outer spine of the expression, without applying any generalisation.
 
 \subsection{Generalisation}
 
-When the termination criteria has been met, it is necessary to discard information about the current expression, so that the optimisation terminates. We always residuate the outer spine of the expression, but first we attempt to generalise the expression so that the information lost is minimal. The paper by S{\o}rensen and Gl{\"u}ck provides a method for generalisation, which works by taking the most specific generationalisation of the current expression and expression which is a homeomorhpic embedding of it. We first show an example where their method fails to produce the ideal generalised version, then show our new method based on the driving/coupling distinction already present in the homeomorhpic embedding.
-
-\begin{code}
-case  putStr (repeat '1') of
-      (r, _) -> (r, ())
-\end{code}
-
-This fragment of code prints an infinite stream of 1's. The pairs and |r|'s correspond to the implementation of GHC's IO Monad \cite{spj:awkward_squad}. After several unrollings, we obtain:
-
-\begin{code}
-case  putChar '1' r of
-      (r, _) -> case  putStr (repeat '1') r of
-                      (r, _) -> (r, ())
-\end{code}
-
-The homeomorhpic embedding detects the repeated occurrence of |putStr|, and the optimisation of this expression is stopped. The most specific generalisation rule produces:
-
-\begin{code}
-let  a = putChar
-     b = '1'
-     c = \r -> case  putStr (repeat '1') r of
-                     (r, _) -> (r, ())
-in case  a b r of
-         (r, _) -> c r
-\end{code}
-
-The problem is that the rule works from the top of both expressions looking for a common root of both trees. However, if the first rule applied was diving, the roots may be unrelated. Using our rule:
-
-\begin{code}
-let x = \r -> case  putStr (repeat '1') r of
-                    (r, _) -> (r, ())
-in case  putChar '1' r of
-         (r, _) -> x r
-\end{code}
-
-Our generalisation is superior as it has lifted the |putStr| operation out in a manner which leaves it identical to the original expression and can be tied back. The |putChar| function has not been altered, so can still be optimised in the context of the |case| expression.
-
+When the termination criterion has been met, it is necessary to discard information about the current expression, so that the supercompilation terminates. We always residuate the outer spine of the expression, but first we attempt to generalise the expression so that the information lost is minimal. The paper by S{\o}rensen and Gl{\"u}ck provides a method for generalisation, which works by taking the most specific generationalisation of the current expression and expression which is a homeomorphic embedding of it.
+ 
 The most specific generalisation of two expressions $s$ and $t$, $\text{msg}(s,t)$, is produced by applying the following rewrite rule to triple $(x,\{x=s\},\{x=t\})$, resulting in a common expression and two sets of bindings.
 
 \[
@@ -383,7 +364,7 @@ The most specific generalisation of two expressions $s$ and $t$, $\text{msg}(s,t
 	\end{array} \right)
 \]
 
-Our generalisation is characterised by $x \bowtie y$, which produces an expression equivalent to $y$, but ideally more similar in structure to $x$ than before.
+Our generalisation is characterised by $x \bowtie y$, which produces an expression equivalent to $y$, but similar in structure to $x$.
 
 \begin{code}
 {-" x \bowtie \sigma^*(y), \text{where dive}(x,\sigma^*(y)) \wedge \text{couple}(x,y) "-}
@@ -400,6 +381,46 @@ Our generalisation is characterised by $x \bowtie y$, which produces an expressi
 \end{code}
 
 The first rule applies if the homeomorphic embedding first applied the dive rule. The idea is to descend to the element which matched, and then promote this to the top-level using a lambda. The fv function in the first rule calculates the free variables in an expression, and $\sigma^*(y)$ denotes a subexpression $y$ within a containing context $\sigma^*$. The second rule applies the most specific generalisation operation if the coupling rule was applied first.
+
+We first show an example where most specific generalisation fails to produce the ideal generalised version. We then show our new method based on the driving/coupling distinction already present in the homeomorphic embedding.
+
+\subsubsection{Example 3}\hfill
+
+\begin{code}
+case  putStr (repeat '1') r of
+      (r, _) -> (r, ())
+\end{code}
+
+This fragment of code prints an infinite stream of 1's. The pairs and |r|'s correspond to the implementation of GHC's IO Monad \cite{spj:awkward_squad}. After several unrollings, we obtain:
+
+\begin{code}
+case  putChar '1' r of
+      (r, _) -> case  putStr (repeat '1') r of
+                      (r, _) -> (r, ())
+\end{code}
+
+The homeomorhpic embedding detects the repeated occurrence of the |putStr| application, and the supercompilation of this expression is stopped. The most specific generalisation rule produces:
+
+\begin{code}
+let  a = putChar
+     b = '1'
+     c = \r -> case  putStr (repeat '1') r of
+                     (r, _) -> (r, ())
+in case  a b r of
+         (r, _) -> c r
+\end{code}
+
+The problem is that the rule works from the top of both expressions looking for a common root of both trees. However, if the first rule applied was diving, the roots may be unrelated. Using our $\bowtie$ generalisation:
+
+\begin{code}
+let x = \r -> case  putStr (repeat '1') r of
+                    (r, _) -> (r, ())
+in case  putChar '1' r of
+         (r, _) -> x r
+\end{code}
+
+Our generalisation is superior because it has split out the |putStr| application \textit{without} lifting out the |putChar| application or the constant |'1'|. The |putChar| function can now be supercompiled further in the context of the case expression.\noexample
+
 
 
 \begin{comment}
@@ -578,8 +599,13 @@ All the C versions are implemented following a similar pattern to Figure \ref{fi
 We performed all benchmarks on a machine running Windows XP, with a 3GHz processor and 1Gb RAM. All benchmarks were run over a 50Mb log file, repeated 10 times, and the lowest value was taken. The C versions used GCC\footnote{\url{http://gcc.gnu.org/}} version 3.4.2 with -O3. The Haskell version used GHC 6.8.1 with -O2. The Supero version was compiled using our optimiser, then written back as a Haskell file, and compiled once more with GHC 6.8.1 and -O2.
 
 \begin{fig}
+\vspace{4mm}
+\begin{center}
 % http://csdl.ics.hawaii.edu/FAQ/chart-ps.html
-\includegraphics[scale=0.75,angle=270]{wc.eps} 
+\includegraphics[scale=0.75,angle=270]{wc.eps}
+\end{center}
+\vspace{1mm}
+\figend
 \caption{Benchmarks with C, Supero+GHC and GHC alone.}
 \label{fig:c_results}
 \end{fig}
@@ -649,28 +675,11 @@ The standard set of Haskell benchmarks is the nofib suite \cite{nofib}. It is di
 We exclude two benchmarks, paraffins and integrate. The paraffins benchmark makes substantial use of arrays, and we have not yet mapped the array primitives of Yhc onto those of GHC, which would be required to run the transformed result. The integrate benchmark tests arithmetic on the |Double| type, and can be optimised by Supero. Unfortunately, the resultant executables consume increasingly large amounts of memory and fail to produce an answer. We suspect the mistranslation of a primitive operation is at fault, but have yet to track down the cause.
 
 \begin{fig}
-\vspace{7mm}
-\begin{barenv}
-\setwidth{20}
-\setdepth{0}
-\sethspace{0.5}
-\setstretch{1}
-\setnumberpos{empty}
-% \setxaxis{0}{1}{1}
-% \setxname{$n$}
-\setyaxis{0}{100}{10} \setyname{\% of GHC run-time}
-\bar{0}{0}
-\bar{90}{1}[digits-of-e1]
-\bar{0}{0}
-\bar{75}{1}[digits-of-e2]
-\bar{0}{0}
-\bar{35}{1}[exp3\_8]
-\bar{0}{0}
-\bar{87}{1}[primes]
-\bar{0}{0}
-\bar{78}{1}[queens]
-\bar{0}{0}
-\end{barenv}
+\vspace{4mm}
+\begin{center}
+% http://csdl.ics.hawaii.edu/FAQ/chart-ps.html
+\includegraphics[scale=0.75,angle=270]{nofib.eps}
+\end{center}
 \vspace{3mm}
 \figend
 \caption{Runtime, relative to GHC.}
@@ -726,17 +735,17 @@ The existence of a termination bound requiring different values for different pr
 
 Supercompilation \cite{supercompilation,turchin:experiments} was introduced by Turchin for the Refal language \cite{refal}. Since this original work, there have been various suggestions of both termination strategies and generalisation strategies \cite{turchin:generalisation}. The termination strategy we use is taken from \cite{sorensen:supercompilation} and is based on homeomorphic embedding \cite{leuschel:homeomorphic}. The original supercompiler maintained both positive and negative knowledge, but our implementation is a simplified version maintaining only positive information \cite{secher:perfect_supercompilation}.
 
-The issue of let expressions in supercompilation has not previously been a primary focus. If lets are mentioned, the usual strategy is to substitute all linear lets and residuate all others. Let's have been considered in a strict setting \cite{jonsson:supercompilation}, where they are used to preserve termination semantics, but here all strict lets are inlined without regard to loss of sharing. It is known that the movement of lets can have dramatic impact on performance, providing an average speedup of 15\% in GHC \cite{spj:letfloating}, suggesting let expressions are critical to the performance of real programs.
+The issue of let expressions in supercompilation has not previously been a primary focus. If lets are mentioned, the usual strategy is to substitute all linear lets and residuate all others. Lets have been considered in a strict setting \cite{jonsson:supercompilation}, where they are used to preserve termination semantics, but in this work all strict lets are inlined without regard to loss of sharing. Movement of lets can have dramatic impact on performance: carefully designed let-shifting transformations give an average speedup of 15\% in GHC \cite{spj:letfloating}, suggesting let expressions are critical to the performance of real programs.
 
-\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. The emphasis is on determining which variable can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with an expression tree to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work and partial evaluation is that we fold back definitions, and perform no binding time analysis. Partial evaluation is not usually able to remove intermediate data structures. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements. Partial evaluation has been applied to full-scale functional languages, such as Curry \cite{albert:partial_evaluation_curry}.
+\paragraph{Partial evaluation} There has been a lot of work on partial evaluation \cite{jones:partial_evaluation}, where a program is specialised with respect to some static data. The emphasis is on determining which variables can be entirely computed at compile time, and which must remain in the residual program. Partial evaluation is particularly appropriate for specialising an interpreter with an expression tree to generate a compiler automatically, often with an order of magnitude speedup, known as the First Futamura Projection \cite{futanama:projections}. The difference between our work and partial evaluation is that we fold back definitions, and perform no binding time analysis. Partial evaluation is not usually able to remove intermediate data structures. Our method is certainly less appropriate for specialising an interpreter, but in the absence of static data, is still able to show improvements. Partial evaluation has been applied to full-scale functional languages, such as Curry \cite{albert:partial_evaluation_curry}.
 
-\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs. Shortcut deforestation is limited to cases where the correct underlying function is used -- sometimes requiring unnatural definitions.
+\paragraph{Deforestation} The deforestation technique \cite{wadler:deforestation} removes intermediate lists in computations. This technique has been extended in many ways to encompass higher order deforestation \cite{marlow:higher_order_deforestation} and work on other data types \cite{coutts:string_fusion}. Probably the most practically motivated work on deforestation has come from those attempting to restrict deforestation, in particular shortcut deforestation \cite{gill:shortcut_deforestation}, and newer approaches such as stream fusion \cite{coutts:stream_fusion}. In this work certain named functions are automatically fused together. By rewriting library functions in terms of these special functions, fusion occurs.
 
-\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but even once efficient Core has been generated there is still some work before efficient machine code can be produced. Key optimisations include strictness analysis and unboxing \cite{spj:unboxing}. In GHC both of these optimisations are done at the Core level, using a Core language extended with unboxed types. After this lower level Core has been generated, it is then transformed in to STG machine instructions \cite{spj:stg}, before being transformed into assembly code. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
+\paragraph{Whole Program Compilation} The GRIN approach \cite{grin} uses whole program compilation for Haskell. It is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first translating Haskell into a monadic intermediate language, then repeatedly performing a series of optimisations, upon the whole program at once. The intermediate language is at a much lower level than our Core language, so jhc is able to perform detailed optimisations that we are unable to express.
+
+\paragraph{Lower Level Optimisations} Our optimisation works at the Core level, but even once efficient Core has been generated there is still some work before efficient machine code can be produced. Key optimisations include strictness analysis and unboxing \cite{spj:unboxing}. In GHC both of these optimisations are done at the Core level, using a Core language extended with unboxed types. After this lower level Core has been generated, it is then compiled to STG machine instructions \cite{spj:stg}, from which assembly code is generated. There is still work being done to modify the lowest levels to take advantage of the current generation of microprocessors \cite{marlow:pointer_tagging}. We rely on GHC to perform all these optimisations after Supero generates a residual program.
 
 \begin{comment}
-\paragraph{GRIN} The GRIN approach \cite{grin} is currently being implemented in the jhc compiler \cite{jhc}, with promising initial results. GRIN works by first translating to a monadic intermediate language, then repeatedly performing a series of optimisations, using whole program transformation. The intermediate language is at a much lower level than our Core language, so jhc is able to perform detailed optimisations that we are unable to express.
-
 \paragraph{Other Transformations} One of the central operations within our optimisation in inlining, a technique that has been used extensively within GHC \cite{spj:inlining}. We generalise the constructor specialisation technique \cite{spj:specconstr}, by allowing specialisation on any arbitrary expression, including constructors.
 
 One optimisation we do not currently support is the use of user provided transformation rules \cite{spj:rules}, which can be used to automatically replace certain expressions with others -- for example |sort . nub| removes duplicates then sorts a list, but can be done asymptotically faster in a single operation.
